terraform/modules/vpc/01-vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr
#   instance_tenancy = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.project_name}-${var.environment}-vpc"
    Environment = var.environment
  }
}
